---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- kind:
    name: TypingOnlyThirdPartyImport
    body: "Move third-party import `pkg.bar.A` into a type-checking block"
    commit: ~
    fixable: false
  location:
    row: 51
    column: 24
  end_location:
    row: 51
    column: 25
  fix: ~
  parent: ~

